--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.15.1",
-    "cors": "^2.8.1",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.1",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "email-validator": "^1.0.7",
     "express": "~4.13.4",
     "express-mailer": "^0.3.1",
     "express-session": "^1.14.1",
+    "generate-safe-id": "^1.0.3",
     "helmet": "^3.4.0",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.17.10",
@@ -27,7 +28,8 @@
     "promise": "^8.0.1",
     "randomstring": "^1.1.5",
     "serve-favicon": "~2.3.0",
-    "shortid": "^2.2.6",
+    "shortid": "^2.2.15",
+    "socket.io": "^2.3.0",
     "tinyurl": "^1.1.2",
     "twit": "^2.2.10"
   },
